# multi-agent

./: .gitignore
agent-development/: .env.example  .gitignore  AGENTS.md  README.md  TASK1.md  TASK2.md  TASK3.md  TASK4.md  TASK5.md  TASK6.md  TASK_SKILL_UPGRADE.md  TASK_log.md  pyproject.toml
agent-development/.data/: agent_mvp.sqlite3
agent-development/app/: __init__.py  main.py
agent-development/design/: VERIFY_REPAIR_EVAL_ARCHITECTURE.md  p0_p1_enterprise_harness_detailed_design.md
agent-development/docs/: Endo Aftercare Full Request Debug Trace.md  Initialization Loading.md  Knowledge Service Usage.md  MAIN_FLOW_CODE_WALKTHROUGH.md  Tool Calling Runner Endo Aftercare Flow.md  architecture_acceptance_checklist.md  auth_context.md  current_architecture.md  enterprise_agent_auth_design.md  entity_routing_design.md  harness.md  human_approval_flow.md  mcp_client_integration.md  multi_agent_enterprise_harness_design.md  skill_metadata_standard.md  target_architecture.md  tool_system.md
agent-development/explain/: ContextBuilder.build_for_orchestrator.md  EntityExtractor.md  IntentRecognitionNode.recognize.md  Principal.md  QueryRewriteNode.rewrite.md  ToolCallingRunner.md  assemble_task.md  discover_agents.md  dispatch_agent.md  select_agent.md
agent-development/mermaid/: graph.md
agent-development/opt/: enterprise-agent-architecture-optimization-report.md  enterprise-direct-answer-gate-design.md
agent-development/questions/: Q1.md  x.md
agent-development/revision-notes/: 01-query-rewrite-and-entities.md  02-intent-and-agent-routing.md  README.md  (+8 more)
(+478 files in other folders)
