[project]
name = "health-insurance-agent-mvp"
version = "0.1.0"
description = "First-stage enhanced MVP for a health insurance individual business agent platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
